@@ -1,4 +1,3 @@
-// config/SPmHelperConfig.java
 package zadudoder.spmhelper.config;
 
 import com.google.gson.JsonObject;
@@ -17,29 +16,15 @@ public class SPmHelperConfig {
             JsonObject config = new JsonObject();
             config.addProperty("id", id);
             config.addProperty("token", token);
-            Files.write(CONFIG_PATH, config.toString().getBytes());
+            Files.writeString(CONFIG_PATH, config.toString());
         } catch (IOException e) {
             e.printStackTrace();
         }
     }
 
-    public static String getToken() {
-        try {
-            if (!Files.exists(CONFIG_PATH)) {
-                return null;
-            }
-            JsonObject config = JsonParser.parseString(Files.readString(CONFIG_PATH)).getAsJsonObject();
-            return config.get("token").getAsString();
-        } catch (Exception e) {
-            return null;
-        }
-    }
-
     public static String getId() {
         try {
-            if (!Files.exists(CONFIG_PATH)) {
-                return null;
-            }
+            if (!Files.exists(CONFIG_PATH)) return null;
             JsonObject config = JsonParser.parseString(Files.readString(CONFIG_PATH)).getAsJsonObject();
             return config.get("id").getAsString();
         } catch (Exception e) {
@@ -47,34 +32,13 @@ public class SPmHelperConfig {
         }
     }
 
-    public static void setDiscordToken(String token) {
+    public static String getToken() {
         try {
-            JsonObject config = getConfig();
-            config.addProperty("discordToken", token);
-            saveConfig(config);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-    }
-
-    public static String getDiscordToken() {
-        try {
-            JsonObject config = getConfig();
-            return config.has("discordToken") ? config.get("discordToken").getAsString() : null;
+            if (!Files.exists(CONFIG_PATH)) return null;
+            JsonObject config = JsonParser.parseString(Files.readString(CONFIG_PATH)).getAsJsonObject();
+            return config.get("token").getAsString();
         } catch (Exception e) {
             return null;
         }
     }
-
-    private static JsonObject getConfig() throws IOException {
-        if (!Files.exists(CONFIG_PATH)) {
-            return new JsonObject();
-        }
-        return JsonParser.parseString(Files.readString(CONFIG_PATH)).getAsJsonObject();
-    }
-
-    private static void saveConfig(JsonObject config) throws IOException {
-        Files.write(CONFIG_PATH, config.toString().getBytes());
-    }
-
 }
